# mcp-for-embedded

./: README.md  iot_demo.py  scope.md  vehicle_gateway.py
fastmcp-examples/: calculator_client.py  calculator_mcp.py  calculator_raw_client.py  grpc_client.py  grpc_mcp.py  http_fastmcp_client.py  http_mcp_server.py  http_raw_client.py  http_rest_client.py  http_rest_mcp.py  mcp_client_base.py  mqtt_client.py  mqtt_mcp.py  requirements.txt  serial_client.py  serial_mcp.py  socketcan_client.py  socketcan_mcp.py  sqlite_client.py  sqlite_mcp.py
rmcp-examples/: CLEAN  Prompts  Ref  TOC.md  TODO  target-build-dr.md
rmcp-examples/grpc-examples/: Cargo.toml  build.rs
rmcp-examples/grpc-examples/proto/: examples.proto
rmcp-examples/grpc-examples/src/: client.rs  server.rs
rmcp-examples/grpc-mcp-server/: Cargo.toml
rmcp-examples/grpc-mcp-server/src/: main.rs
rmcp-examples/hello-rest-mcp/: Cargo.toml
rmcp-examples/hello-rest-mcp/src/: main.rs
rmcp-examples/http-rest-mcp/: Cargo.toml
rmcp-examples/mqtt-mcp-server/: Cargo.toml
rmcp-examples/mqtt-mcp-server/src/: main.rs
rmcp-examples/my-first-rig-project/: Cargo.toml
rmcp-examples/my-first-rig-project/src/: agent_with_context.rs  agent_with_preamble.rs  hello_agent.rs  main.rs  mcp_tool_agent.rs
rmcp-examples/rig-simple/: Cargo.toml
rmcp-examples/serial-mcp/: Cargo.toml  README.md
rmcp-examples/serial-mcp/src/: main.rs
rmcp-examples/simple-calculator/simple-mcp-client/: Cargo.toml
rmcp-examples/simple-calculator/simple-mcp-client/src/: main.rs
rmcp-examples/simple-calculator/simple-mcp-server/: Cargo.toml
rmcp-examples/simple-calculator/simple-mcp-server/src/: main.rs
rmcp-examples/socketcan-iot-mcp-gateway/: Cargo.toml
rmcp-examples/socketcan-iot-mcp-gateway/src/: _gateway_no_mcp.rs  agent.rs  gateway.rs  main.rs
rmcp-examples/socketcan-mcp/: Cargo.toml
rmcp-examples/socketcan-mcp/src/: main.rs
rmcp-examples/sqlite-mcp/: Cargo.toml  seed_vehicles.py  vehicles.db
rmcp-examples/sqlite-mcp/src/: main.rs
