[package]
name = "mqtt-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-io"] }
rumqttc = "0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
anyhow = "1"
